--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HTML5, CSS3, JS(ES6), Использована методология БЭМ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/TimofeiPustarnak/mesto/issues"
   },
-  "homepage": "https://github.com/TimofeiPustarnak/mesto#readme"
+  "homepage": "https://github.com/TimofeiPustarnak/mesto#readme",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^4.2.0"
+  }
 }
