--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "mesto",
-  "version": "0.0.1",
-  "description": "HTML5, CSS3, JS(ES6), Использована методология БЭМ",
+  "version": "1.0.0",
+  "description": "HTML5, CSS3, JS(ES6), Webpack, Использована методология БЭМ",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "rimraf dist && webpack",
+    "dev": "webpack serve --mode development --env development"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TimofeiPustarnak/mesto.git"
   },
-  "author": "Timofei Pustarnak",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TimofeiPustarnak/mesto/issues"
   },
   "homepage": "https://github.com/TimofeiPustarnak/mesto#readme",
   "devDependencies": {
+    "rimraf": "^3.0.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
