--- a/package.json
+++ b/package.json
@@ -18,9 +18,23 @@
   },
   "homepage": "https://github.com/TimofeiPustarnak/mesto#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.2",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "postcss-loader": "^4.0.4",
     "rimraf": "^3.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "core-js": "^3.7.0"
   }
 }
