--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack",
-    "dev": "webpack serve --mode --open --watch development --env development"
+    "dev": "webpack serve --mode development --env development"
   },
   "repository": {
     "type": "git",
